--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -13,15 +13,15 @@
   color: white;
 }
 
-#filter-list-form{
-background-color: rgb(201, 252, 205);
+#filter-list-form {
+  background-color: #fff;
 }
 
-#h6-filter{
+#h6-filter {
   color: black;
   font-weight: bold;
 }
 
-#max_lotacao_value{
+#max_lotacao_value {
   font-weight: bold;
 }
