--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -14,7 +14,7 @@ $font-size-base: 1rem;
 $body-color: $gray;
 $primary: $green-dark;
 $success: $green-light;
-$info: $yellow;
+$info: $secondary-color;
 $danger: $red;
 $warning: $orange;
 
