--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -29,7 +29,7 @@
       </div>
 
       <div class="text-center">
-        <%= submit_tag "Montar treino", class: "btn-submit" %>
+        <%= submit_tag "Montar treino", class: "btn-submit btn-success rounded-custom" %>
       </div>
     <% end %>
   </div>
