--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,6 +1,6 @@
 <div class="chat-container" data-controller="chat alert" data-user-trainings-path="<%= user_trainings_path %>">
 
-<div class="container">
+<div class="container desempenho">
   <h1 class="text-center mt-4 mb-4 text-light">Meu Desempenho</h1>
 
   <%= simple_form_for(@profile) do |form| %>
