--- a/app/assets/stylesheets/components/_food.scss
+++ b/app/assets/stylesheets/components/_food.scss
@@ -8,13 +8,17 @@
   max-width: 800px;
 }
 
-.food-dashboard-calorias-info, .food-dashboard-calorias-chart, .food-dashboard-alimentos-consumidos {
+.food-dashboard-calorias-info,
+.food-dashboard-calorias-chart,
+.food-dashboard-alimentos-consumidos {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
 }
 
-.food-dashboard-calorias-info h4, .food-dashboard-calorias-info p, .food-dashboard-alimentos-consumidos h6 {
+.food-dashboard-calorias-info h4,
+.food-dashboard-calorias-info p,
+.food-dashboard-alimentos-consumidos h6 {
   margin-bottom: 10px;
 }
 
@@ -35,7 +39,6 @@
   margin-right: 20px;
 }
 
-
 .food-dashboard-list-group-item {
   display: flex;
   justify-content: space-between;
@@ -49,14 +52,14 @@
 
 /* Estilo para os cards */
 .food-dashboard .card {
-  background: linear-gradient(135deg, #fff, #90e13e);
+  background-color: $black;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* Cores e fontes para os textos */
-.food-dashboard-text-dark {
-  color: black !important;
+.food-dashboard-text-light {
+  color: #fff !important;
 }
 
 .food-dashboard-text-info {
@@ -83,6 +86,11 @@
 .food-dashboard-actions-buttons .food-dashboard-btn:hover {
   transform: scale(1.05); /* Efeito de aumento ao passar o mouse */
   background-color: #0056b3;
+}
+
+.food-name {
+  font-size: 0.75rem;
+  text-align: start;
 }
 
 /* Responsividade para telas pequenas */
