--- a/app/views/water_intakes/new.html.erb
+++ b/app/views/water_intakes/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container-food">
   <!-- Link de retorno para Nutri -->
-  <%= link_to nutri_food_intakes_path, class: "btn btn-primary mb-4 rounded-left" do %>
+  <%= link_to nutri_food_intakes_path, class: "btn btn-success mb-4 rounded-custom" do %>
     <i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar para Nutri
   <% end %>
 
-  <h1 class="my-4 text-center text-primary">Adicionar Consumo de Água</h1>
+  <h1 class="my-4 text-center text-light">Adicionar Consumo de Água</h1>
 
   <%= form_with(model: @water_intake, local: true) do |form| %>
     <div class="form-group">
@@ -17,8 +17,8 @@
       <%= form.date_field :date, class: "form-control form-control-lg", value: Date.today %>
     </div>
 
-    <div class="form-group">
-      <%= form.submit "Adicionar Água", class: "btn btn-success btn-lg w-100" %>
+    <div class="form-group mt-4">
+      <%= form.submit "Adicionar Água", class: "btn btn-success rounded-custom btn-lg w-100" %>
     </div>
   <% end %>
 </div>
