--- a/app/assets/stylesheets/components/_food.scss
+++ b/app/assets/stylesheets/components/_food.scss
@@ -11,6 +11,7 @@
 .food-dashboard-calorias-info,
 .food-dashboard-calorias-chart,
 .food-dashboard-alimentos-consumidos {
+  margin: 0px auto;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
