--- a/app/assets/stylesheets/pages/_myaccount.scss
+++ b/app/assets/stylesheets/pages/_myaccount.scss
@@ -18,7 +18,6 @@
   .opcoes-conta {
     margin-top: 20px;
 
-
     .botao-editar,
     .botao-desempenho {
       display: block;
@@ -35,4 +34,7 @@
       }
     }
   }
+}
+.hint {
+  color: white;
 }
