--- a/app/assets/stylesheets/pages/_food_index.scss
+++ b/app/assets/stylesheets/pages/_food_index.scss
@@ -3,7 +3,7 @@
   padding: 20px;
   background-color: #030303;
   border-radius: 10px;
-  margin: 10px;
+  margin: 0px auto;
   border: 1px solid #00e20b;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -19,7 +19,7 @@
 .container-food {
   & form {
     background-color: $gray-b;
-    margin: 0px;
+    margin: 0px auto;
   }
 }
 
