--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,62 +1,57 @@
-<h2>Sign up</h2>
+<div class="container mt-4">
+  <h2>Registrar</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-
-
-    <%= f.input :first_name, label: "Nome",
-                required: true,
-                input_html: { autocomplete: "given-name" } %>
-    <%= f.input :last_name, label: "Sobrenome",
-                required: true,
-                input_html: { autocomplete: "family-name" } %>
-    <%= f.input :birthday,
-                label: "Data de nascimento",
-                as: :date,
-                required: true,
-                start_year: 1930,
-                end_year: Date.today.year,
-                prompt: { day: 'Dia', month: 'Mês', year: 'Ano' } %>
-
-    <%= f.input :gender, label: "Gênero",
-                as: :select,
-                collection: [['Male', 'male'], ['Female', 'female'], ['Other', 'other']],
-                required: true %>
-    <%= f.input :phone, label: "Celular",
-                required: false,
-                input_html: { autocomplete: "tel" } %>
-    <%= f.input :profile_picture, label: "Foto de perfil",
-                as: :file,
-                required: false %>
-
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+    <div class="form-inputs">
 
 
+      <%= f.input :first_name, label: "Nome",
+                  required: true,
+                  input_html: { autocomplete: "given-name" } %>
+      <%= f.input :last_name, label: "Sobrenome",
+                  required: true,
+                  input_html: { autocomplete: "family-name" } %>
+      <%= f.input :birthday,
+                  label: "Data de nascimento",
+                  as: :date,
+                  required: true,
+                  start_year: 1930,
+                  end_year: Date.today.year,
+                  prompt: { day: 'Dia', month: 'Mês', year: 'Ano' } %>
 
+      <%= f.input :gender, label: "Gênero",
+                  as: :select,
+                  collection: [['Male', 'male'], ['Female', 'female'], ['Other', 'other']],
+                  required: true %>
+      <%= f.input :phone, label: "Celular",
+                  required: false,
+                  input_html: { autocomplete: "tel" } %>
+      <%= f.input :profile_picture, label: "Foto de perfil",
+                  as: :file,
+                  required: false %>
 
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" } %>
+      <%= f.input :password,
+                  required: true,
+                  hint: ("<span class='hint'>#{@minimum_password_length} characters minimum</span>".html_safe if @minimum_password_length),
+                  label: "Senha",
+                  input_html: { autocomplete: "new-password" } %>
 
+      <%= f.input :password_confirmation,
+                  required: true,
+                  label: "Confirmar senha",
+                  input_html: { autocomplete: "new-password" } %>
+    </div>
+    <div class="form-actions">
+      <%= f.button :submit, "Registrar", class: 'btn btn-success rounded-custom'   %>
+    </div>
+  <% end %>
 
+  <%= render "devise/shared/links" %>
 
-
-
-
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: 'btn btn-success'   %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
