--- a/app/views/food_intakes/nutri.html.erb
+++ b/app/views/food_intakes/nutri.html.erb
@@ -37,7 +37,7 @@
     <h6 class="food-dashboard-text-light">Alimentos consumidos hoje:</h6>
     <ul class="food-dashboard-list-group p-0">
       <% current_user.food_intakes.where(date: Date.today).each do |food_intake| %>
-        <li class="food-dashboard-list-group-item d-flex justify-content-between align-items-center mt-2">
+        <li class="food-dashboard-list-group-item d-flex gap-3 justify-content-between align-items-center mt-2">
           <p class="text-light m-0 food-name"><%= food_intake.product_name %></p>
           <span class="badge bg-warning rounded-pill"><%= food_intake.calories %> kcal</span>
           <span class="badge bg-success rounded-pill"><%= food_intake.protein %> g</span>
